--- a/Computer.html
+++ b/Computer.html
@@ -43,7 +43,7 @@
 <li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a></ul>
 
 <p><dt>Workshops<dd><ul>
-<li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens.html">Playing with UGens</a></ul>
+<li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens.html">Playing with UGens</a><li><a href="./Workshops/Patterns and Ndefs.html">Patterns and Ndefs</a></ul>
 
 <p><dt>Study Guides<dd><ul>
 <li><a href="./Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./Study Guides/Digital Audio.html">Digital Audio</a><li><a href="./Study Guides/Digital Synthesis.html">Digital Synthesis</a></ul>
