--- a/moduleplan.htm
+++ b/moduleplan.htm
@@ -636,8 +636,8 @@ td
   (1)</td>
   <td class=xl74 width=109 style='border-top:none;border-left:none;width:82pt'>Digital
   Synthesis<span style='mso-spacerun:yes'>&nbsp;</span></td>
-  <td class=xl74 width=116 style='border-top:none;border-left:none;width:87pt'>Modulation
-  Synthesis, Effects, Ndefs and Patterns</td>
+  <td class=xl74 width=116 style='border-top:none;border-left:none;width:87pt'>Patterns
+  and Ndefs</td>
   <td class=xl77 width=113 style='border-top:none;border-left:none;width:85pt'>Tutorials
   (1)</td>
   <td class=xl74 width=113 style='border-top:none;border-left:none;width:85pt'>Human-Computer
