--- a/Classes/Button.html
+++ b/Classes/Button.html
@@ -7,6 +7,7 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
+<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -19,8 +20,8 @@
 <div id='summary'>A multi-state button</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/GUI/Base/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/GUI/Base/BasicViews.sc'>BasicViews.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/View.html">View</a> : <a href="../Classes/QObject.html">QObject</a> : <a href="../Classes/Object.html">Object</a></div>
-<div id='subclasses'>Subclasses: <a href="../Classes/QButton.html">QButton</a></div>
+<div id='filename'>Source: /Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/SCClassLibrary/Common/GUI/<a href='file:///Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/SCClassLibrary/Common/GUI/ViewRedirect.sc'>ViewRedirect.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/ViewRedirect.html">ViewRedirect</a> : <a href="../Classes/GuiRedirect.html">GuiRedirect</a> : <a href="../Classes/Object.html">Object</a></div>
+<div class='inheritance'>Implementing class: <a href="../Classes/SCButton.html">SCButton</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
@@ -29,12 +30,11 @@
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
 <li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
 <li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
-<ul class='toc'><li class='toc3'><a href='#*qtClass'>qtClass</a> </li>
+<ul class='toc'><li class='toc3'><a href='#*key'>key</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-states'>states</a> </li>
 <li class='toc3'><a href='#-value'>value</a> </li>
 <li class='toc3'><a href='#-valueAction'>valueAction</a> </li>
-<li class='toc3'><a href='#-string'>string</a> </li>
 <li class='toc3'><a href='#-font'>font</a> </li>
 <li class='toc2'><a href='#Subclassing and Internal Methods'>Subclassing and Internal Methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-doAction'>doAction</a> </li>
@@ -44,10 +44,7 @@
 <li class='toc3'><a href='#-defaultCanReceiveDrag'>defaultCanReceiveDrag</a> </li>
 <li class='toc3'><a href='#-defaultReceiveDrag'>defaultReceiveDrag</a> </li>
 </ul><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
-<ul class='toc'><li class='toc3'><a href='#-action'>action</a> </li>
-<li class='toc3'><a href='#-prDoAction'>prDoAction</a> </li>
-</ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
+</ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>A multi-state button.<h3><a class='anchor' name='Some Important Issues Regarding Button'>Some Important Issues Regarding Button</a></h3>
@@ -56,7 +53,7 @@
 <p>The button performs its action upon releasing the mouse. In musical contexts, you might want to use <code class='code prettyprint lang-sc'>mouseDownAction_()</code> to set a function to be performed on pressing the mouse (see <a href="./../Classes/View.html">View</a>, and examples below).
 <p>If the drag contains a number, then <code class='code prettyprint lang-sc'>valueAction_()</code> is performed using the <code class='code prettyprint lang-sc'>currentDrag</code>. If the drag contains anything else, <code class='code prettyprint lang-sc'>action</code> is set to the current drag. You could, for example, drag a function to an Button, and action would then be set to that function.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>parent</span>, <span class='argstr'>bounds</span>)</h3>
-<div class='supmethod'>From superclass: <a href='./../Classes/View.html'>View</a></div>
+<div class='supmethod'>From superclass: <a href='./../Classes/SCView.html'>SCView</a></div>
 <div class='method'><h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>parent<td class='argumentdesc'>
@@ -80,52 +77,31 @@ w.front;
 )</pre>
 </div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*qtClass' href='./../Overviews/Methods.html#qtClass'>qtClass</a> </h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*key' href='./../Overviews/Methods.html#key'>key</a> </h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-states' href='./../Overviews/Methods.html#states'>states</a></h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-states' href='./../Overviews/Methods.html#states'>states</a> = <span class='argstr'>stateArray</span></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-states' href='./../Overviews/Methods.html#states'>states</a> = <span class='argstr'>array</span></h3>
+<div class='supmethod'>From implementing class</div>
 <div class='method'>
 <p>An array of labels and colors defining the states of the button.<h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>stateArray<td class='argumentdesc'>
-<p>An <a href="./../Classes/Array.html">Array</a> of arrays of the form <code class='code prettyprint lang-sc'>[ [String, strColor, bgColor] , .... ]</code><pre class='code prettyprint lang-sc'>(
-w = Window.new;
-a = Button(w, Rect(130, 130, 100, 100));
-w.front;
-)
-
-// change the states:
-a.states = [["yes", Color.grey, Color.white], ["no", Color.white, Color.grey]];
-a.states = [["yes", Color.grey, Color.white], ["no", Color.white, Color.grey], ["perhaps", Color.black, Color.green(0.8)], []];
-
-// change the states on action:
-(
-a.action = { |view|
-    if(view.value == 3) { a.states =  [[["yes", "no"].choose, Color.grey, Color.white]] }
-}
-);</pre>
-</table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-value' href='./../Overviews/Methods.html#value'>value</a></h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-value' href='./../Overviews/Methods.html#value'>value</a> = <span class='argstr'>argVal</span></h3>
+<p>An <a href="./../Classes/Array.html">Array</a> of arrays of the form <code class='code prettyprint lang-sc'>[ [String, strColor, bgColor] , .... ]</code></table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-value' href='./../Overviews/Methods.html#value'>value</a></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-value' href='./../Overviews/Methods.html#value'>value</a> = <span class='argstr'>val</span></h3>
+<div class='supmethod'>From implementing class</div>
 <div class='method'>
 <p>Sets or returns the index of the current state. This will <strong>not</strong> evaluate the function assigned to <strong>action</strong> (see <a href="./../Classes/View.html">View</a>).<h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>argVal<td class='argumentdesc'>
-<p>The index of an item in the states array.</table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-valueAction' href='./../Overviews/Methods.html#valueAction'>valueAction</a><h3 class='imethodname'><span class='methprefix'>-</span><a name='-valueAction' href='./../Overviews/Methods.html#valueAction'>valueAction</a> = <span class='argstr'>anInt</span></h3>
+<p>The index of an item in the states array.</table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-valueAction' href='./../Overviews/Methods.html#valueAction'>valueAction</a><h3 class='imethodname'><span class='methprefix'>-</span><a name='-valueAction' href='./../Overviews/Methods.html#valueAction'>valueAction</a> = <span class='argstr'>val</span></h3>
+<div class='supmethod'>From implementing class</div>
 <div class='method'>
 <p>Sets the button to display the item at index <strong>anInt</strong> of the states array, and evaluates <strong>action</strong> (see <a href="./../Classes/View.html">View</a>), if the value has changed.<h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>anInt<td class='argumentdesc'>
-<p>The index of an item in the states array.</table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-string' href='./../Overviews/Methods.html#string'>string</a></h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-string' href='./../Overviews/Methods.html#string'>string</a> = <span class='argstr'>string</span></h3>
-<div class='method'>
-<p>Sets or gets the text of the currently active state.<pre class='code prettyprint lang-sc'>(
-w = Window("but", Rect(300, 300, 200, 200)).front;
-b = Button(w, Rect(30, 40, 140, 50));
-b.string = "hello button";
-)</pre>
-</div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-font' href='./../Overviews/Methods.html#font'>font</a></h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-font' href='./../Overviews/Methods.html#font'>font</a> = <span class='argstr'>f</span></h3>
-<div class='supmethod'>From superclass: <a href='./../Classes/View.html'>View</a></div>
+<p>The index of an item in the states array.</table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-font' href='./../Overviews/Methods.html#font'>font</a></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-font' href='./../Overviews/Methods.html#font'>font</a> = <span class='argstr'>argFont</span></h3>
+<div class='supmethod'>From implementing class</div>
 <div class='method'>
 <p>Sets the Font of the button. Default value is the default font: Font.default .<h4>Arguments:</h4>
 <table class='arguments'>
@@ -133,35 +109,34 @@ b.string = "hello button";
 <p>An instance of <a href="./../Classes/Font.html">Font</a>.</table></div><h3><a class='anchor' name='Subclassing and Internal Methods'>Subclassing and Internal Methods</a></h3>
 
 <p>The following methods are usually not used directly or are called by a primitive. Programmers can still call or override these as needed.<h3 class='imethodname'><span class='methprefix'>-</span><a name='-doAction' href='./../Overviews/Methods.html#doAction'>doAction</a> (<span class='argstr'>modifiers</span>)</h3>
+<div class='supmethod'>From implementing class</div>
 <div class='method'>
 <p>The method called by the primitive upon releasing the mouse.<h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>modifiers<td class='argumentdesc'>
-<p>A key modifier number, which is passed to the <strong>action</strong> as its second argument upon mouse-releasing the button.</table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-defaultKeyDownAction' href='./../Overviews/Methods.html#defaultKeyDownAction'>defaultKeyDownAction</a> (<span class='argstr'>char</span>, <span class='argstr'>modifiers</span>, <span class='argstr'>unicode</span>, <span class='argstr'>keycode</span>, <span class='argstr'>key</span>)</h3>
-<div class='supmethod'>From superclass: <a href='./../Classes/View.html'>View</a></div>
+<p>A key modifier number, which is passed to the <strong>action</strong> as its second argument upon mouse-releasing the button.</table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-defaultKeyDownAction' href='./../Overviews/Methods.html#defaultKeyDownAction'>defaultKeyDownAction</a> (<span class='argstr'>char</span>, <span class='argstr'>modifiers</span>, <span class='argstr'>unicode</span>)</h3>
+<div class='supmethod'>From implementing class</div>
 <div class='method'><h4>Discussion:</h4>
 
 <p>The default keydown actions are:<table>
 <tr><td>key<td>action<td>comment<tr><td>" "<td>value + 1<td>space<tr><td>\r<td>value + 1<tr><td>\n<td>value + 1<tr><td>3.asAscii<td>value + 1<td>enter key or cmd-C on Mac OSX</table>
 
 <p>To change these use <code class='code prettyprint lang-sc'>defaultKeyDownAction_</code>, see <a href="./../Classes/View.html">View</a>.</div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-properties' href='./../Overviews/Methods.html#properties'>properties</a> </h3>
-<div class='supmethod'>From superclass: <a href='./../Classes/QObject.html'>QObject</a></div>
+<div class='supmethod'>From implementing class</div>
 <div class='method'>
 <p>A list of properties to which this view responds. See <a href="./../Classes/View.html">View</a>.<h4>Returns:</h4>
 <div class='returnvalue'>
 <p>[ \bounds, \visible, \enabled, \canFocus, \resize, \background, \minWidth, \maxWidth, \minHeight, \maxHeight, \value, \font, \states, \focusColor ]</div></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-defaultGetDrag' href='./../Overviews/Methods.html#defaultGetDrag'>defaultGetDrag</a> </h3>
+<div class='supmethod'>From implementing class</div>
 <div class='method'>
 <p>The method called by default when initiating a drag <strong>from</strong> a Button. Returns the same as <a href="#-value">-value</a>.</div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-defaultCanReceiveDrag' href='./../Overviews/Methods.html#defaultCanReceiveDrag'>defaultCanReceiveDrag</a> </h3>
+<div class='supmethod'>From implementing class</div>
 <div class='method'>
 <p>The method called by default when attempting to drop a drag in this object. By default, Button will respond only to drags where the drag contains a <a href="./../Classes/Number.html">Number</a> or <a href="./../Classes/Function.html">Function</a>.</div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-defaultReceiveDrag' href='./../Overviews/Methods.html#defaultReceiveDrag'>defaultReceiveDrag</a> </h3>
+<div class='supmethod'>From implementing class</div>
 <div class='method'>
 <p>The default method called when a drag has been received. If the drag contains a number, then action is set to the current drag. Otherwise <code class='code prettyprint lang-sc'>valueAction_()</code> is performed using the <code class='code prettyprint lang-sc'>currentDrag</code>.</div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-action' href='./../Overviews/Methods.html#action'>action</a></h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-action' href='./../Overviews/Methods.html#action'>action</a> = <span class='argstr'>func</span></h3>
-<div class='supmethod'>From superclass: <a href='./../Classes/View.html'>View</a></div>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-prDoAction' href='./../Overviews/Methods.html#prDoAction'>prDoAction</a> (<span class='argstr'>mods</span>)</h3>
-<h2><a class='anchor' name='examples'>Examples</a></h2>
+<div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>(
 w = Window.new("Example");
 
@@ -205,7 +180,7 @@ s.waitForBoot({
 })
 )</pre>
 
-<p>If you drag a function to a button, the button's action is set to that function. you can us this for swapping functions.<pre class='code prettyprint lang-sc'>(
+<p>If you drag a function to a button, the the button's action is set to that function. you can us this for swapping functions.<pre class='code prettyprint lang-sc'>(
 s.waitForBoot({
     var w, p, snd, b;
 
@@ -397,4 +372,4 @@ f.nextLine;
 w.front;
 )</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Button.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Button.schelp</a><br>link::Classes/Button::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Classes/Button.schelp'>/Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Classes/Button.schelp</a><br>link::Classes/Button::<br>sc version: 3.5.5</div></div></body></html>
