--- a/Classes/Char.html
+++ b/Classes/Char.html
@@ -19,7 +19,7 @@
 <div id='summary'>ascii character</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/Char.sc'>Char.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Magnitude.html">Magnitude</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Char.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Char.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Magnitude.html">Magnitude</a> : <a href="../Classes/Object.html">Object</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
@@ -30,8 +30,8 @@
 <li class='toc3'><a href='#*space'>space</a> </li>
 <li class='toc3'><a href='#*comma'>comma</a> </li>
 <li class='toc3'><a href='#*bullet'>bullet</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc2'><a href='#conversion'>conversion</a></li>
@@ -47,8 +47,8 @@
 <li class='toc3'><a href='#-isSpace'>isSpace</a> </li>
 <li class='toc3'><a href='#-isDecDigit'>isDecDigit</a> </li>
 <li class='toc3'><a href='#-isFileSafe'>isFileSafe</a> </li>
-</ul><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+</ul><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-++'>++</a> </li>
 <li class='toc3'><a href='#-<'>&lt;</a> </li>
 <li class='toc3'><a href='#-=='>==</a> </li>
@@ -76,8 +76,8 @@
 <div class='method'>
 <p>Returns <code class='code prettyprint lang-sc'>($\,)</code></div><h3 class='cmethodname'><span class='methprefix'>*</span><a name='*bullet' href='./../Overviews/Methods.html#bullet'>bullet</a> </h3>
 <div class='method'>
-<p>Returns a bullet character (•) in SuperCollider.app on OSX, but a simple asterix (*) on other frontends. This method is not recommended, since it's actually not cross-platform.</div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<p>Returns a bullet character (•) in SuperCollider.app on OSX, but a simple asterisk (*) on other frontends. This method is not recommended, since it's actually not cross-platform.</div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> </h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3><a class='anchor' name='conversion'>conversion</a></h3>
@@ -132,8 +132,8 @@
     [i,a = i.asAscii,a.isAlphaNum,a.isPrint,a.isPunct,a.isControl].postln;
 });</pre>
 
-<p></div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p></div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-++' href='./../Overviews/Methods.html#++'>++</a> (<span class='argstr'>that</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-<' href='./../Overviews/Methods.html#&lt;'>&lt;</a> (<span class='argstr'>aChar</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-==' href='./../Overviews/Methods.html#=='>==</a> (<span class='argstr'>aChar</span>)</h3>
@@ -145,4 +145,4 @@
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-isPathSeparator' href='./../Overviews/Methods.html#isPathSeparator'>isPathSeparator</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-isUpper' href='./../Overviews/Methods.html#isUpper'>isUpper</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-isVowel' href='./../Overviews/Methods.html#isVowel'>isVowel</a> </h3>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Char.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Char.schelp</a><br>link::Classes/Char::<br>sc version: 3.7.2</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Char.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Char.schelp</a><br>link::Classes/Char::<br>sc version: 3.8.0</div></div></body></html>
