--- a/Classes/Pbind.html
+++ b/Classes/Pbind.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,38 +19,39 @@
 <div id='summary'>combine several value patterns to one event stream by binding keys to values</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/SCClassLibrary/Common/Streams/<a href='file:///Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/SCClassLibrary/Common/Streams/Patterns.sc'>Patterns.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Pattern.html">Pattern</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Patterns.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Patterns.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Pattern.html">Pattern</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Pattern.html">Pattern</a>, <a href="./../Classes/Event.html">Event</a>, <a href="./../Classes/Pmono.html">Pmono</a>, <a href="./../Classes/Rest.html">Rest</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-embedInStream'>embedInStream</a> </li>
 <li class='toc3'><a href='#-patternpairs'>patternpairs</a> </li>
 </ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
-<ul class='toc'><li class='toc2'><a href='#SynthDef and Event'>SynthDef and Event</a></li>
+<ul class='toc'><li class='toc2'><a href='#SynthDef%20and%20Event'>SynthDef and Event</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Rests'>Rests</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#The Play Method'>The Play Method</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Realtime Control with EventStreamPlayer'>Realtime Control with EventStreamPlayer</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Additional arguments'>Additional arguments</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Multichannel Expansion'>Multichannel Expansion</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Sending to effects'>Sending to effects</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Additional examples'>Additional examples</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#The%20Play%20Method'>The Play Method</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Realtime%20Control%20with%20EventStreamPlayer'>Realtime Control with EventStreamPlayer</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Additional%20arguments'>Additional arguments</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Multichannel%20Expansion'>Multichannel Expansion</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Experimenting%20with%20Patterns'>Experimenting with Patterns</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Sending%20to%20effects'>Sending to effects</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Additional%20examples'>Additional examples</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>Pbind combines several value streams into one event stream. Each value stream is assigned to one or more keys in the resulting event stream. It specifies a stream of <strong>Events</strong> in terms of different patterns that are <strong>bound</strong> to different keys in the Event. The patterns bound to keys are referred to as <em>value patterns</em> and the Pbind itself is termed an event pattern.
-<p>The keys used in a Pbind are usually determined by <a href="./../Classes/Event.html">Event</a>'s default mechanism and the controls defined for the <a href="./../Classes/SynthDef.html">SynthDef</a> to be played. (See <a href="#synthdef_and_event">synthdef_and_event</a> below for a brief discussion of both in relation to Pbind.)<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
+<p>The keys used in a Pbind are usually determined by <a href="./../Classes/Event.html">Event</a>'s default mechanism and the controls defined for the <a href="./../Classes/SynthDef.html">SynthDef</a> to be played. (See <a href="#SynthDef%20and%20Event">SynthDef%20and%20Event</a> below for a brief discussion of both in relation to Pbind.)<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> ( <span class='argstr'>... pairs</span>)</h3>
 <div class='method'>
-<p>The arguments to Pbind are an alternating sequence of keys and patterns. A pattern can also be bount to an array of keys. In this case, the pattern must specify a sequence whose elements are arrays with at least as many elements as there are keys.</div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>The arguments to Pbind are an alternating sequence of keys and patterns. A pattern can also be bount to an array of keys. In this case, the pattern must specify a sequence whose elements are arrays with at least as many elements as there are keys.</div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-embedInStream' href='./../Overviews/Methods.html#embedInStream'>embedInStream</a> (<span class='argstr'>inevent</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-patternpairs' href='./../Overviews/Methods.html#patternpairs'>patternpairs</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-patternpairs' href='./../Overviews/Methods.html#patternpairs'>patternpairs</a> = value</h3>
@@ -89,28 +89,31 @@ Pbind(\instrument, \test, \freq, Prand([1, 1.2, 2, 2.5, 3, 4], inf) * 200, \dur,
 (
 Pbind(
     \instrument,        \test,
-    \nharms,        Pseq([4, 10, 40], inf),
-    \dur,            Pseq([1, 1, 2, 1]/10, inf),
+    \nharms,             Pseq([4, 10, 40], inf),
+    \dur,                Pseq([1, 1, 2, 1]/10, inf),
     #[freq, sustain],    Ptuple([ // assignment to multiple keys
-                    Pseq( (1..16) * 50, 4),
-                    Pseq([1/10, 0.5, 1, 2], inf)
-                ])
+                            Pseq( (1..16) * 50, 4),
+                             Pseq([1/10, 0.5, 1, 2], inf)
+                        ])
 ).play;
-)</pre>
+)::
 
-<p>It is possible to specify a Pbind with an <a href="./../Classes/Array.html">Array</a> preceded by *. Arrays treat identifiers ending with a colon as <a href="./../Classes/Symbol.html">Symbol</a>s, making the syntax of the Pbind specification a bit more concise:<pre class='code prettyprint lang-sc'>(
+It is possible to specify a Pbind with an link::Classes/Array:: preceded by *. Arrays treat identifiers ending with a colon as link::Classes/Symbol::s, making the syntax of the Pbind specification a bit more concise:
+
+code::
+(
 // Alternative syntax, using a key/pattern array:
 Pbind(*[
-    instrument:        \test,
-    nharms:            Pseq([4, 10, 40], inf),
-    dur:            Pseq([1, 1, 2, 1]/10, inf),
-    #[freq, sustain],    Ptuple([
-                    Pseq( (1..16) * 50, 4),
-                    Pseq([1/10, 0.5, 1, 2], inf)
-                ])
+    instrument:            \test,
+    nharms:                Pseq([4, 10, 40], inf),
+    dur:                Pseq([1, 1, 2, 1]/10, inf),
+    #[freq, sustain]:    Ptuple([
+                            Pseq( (1..16) * 50, 4),
+                            Pseq([1/10, 0.5, 1, 2], inf)
+                        ])
 ]).play;
 )</pre>
-<h3><a class='anchor' name='SynthDef and Event'>SynthDef and Event</a></h3>
+<h3><a class='anchor' name='SynthDef%20and%20Event'>SynthDef and Event</a></h3>
 
 <p>The keys used in a Pbind are determined by the <a href="./../Classes/SynthDef.html">SynthDef</a> used and the structure of the extensive default mechanism provided by <a href="./../Classes/Event.html">Event</a>. This section provides a brief review of both.
 <p>A <a href="./../Classes/SynthDef.html">SynthDef</a> assigns a name to an interconnection of unit generators to be run as a synth on a server. It also assigns <strong>control names</strong> to the synth's control inputs. In the following example the SynthDef \test has control inputs <strong>out</strong>, <strong>freq</strong>, <strong>amp</strong>, <strong>nharms</strong>, <strong>pan</strong>, and <strong>gate</strong>.<pre class='code prettyprint lang-sc'>SynthDef(\test, { | out, freq = 440, amp = 0.1, nharms = 10, pan = 0, gate = 1 |
@@ -164,11 +167,11 @@ SynthDef(\test, { | out, freq = 440, amp = 0.1, nharms = 10, pan = 0, gate = 1 |
 (instrument: \test, freq: 20, nharms: 50).play;
 )</pre>
 <h3><a class='anchor' name='Rests'>Rests</a></h3>
-See <a href="./../Classes/Rest.html">Rest</a> for a discussion of marking events as rests in Pbind.<h3><a class='anchor' name='The Play Method'>The Play Method</a></h3>
+See <a href="./../Classes/Rest.html">Rest</a> for a discussion of marking events as rests in Pbind.<h3><a class='anchor' name='The%20Play%20Method'>The Play Method</a></h3>
 
 <p>While the play method is actually defined in the class <a href="./../Classes/Pattern.html">Pattern</a>, it is useful to review it here:<dl>
 <dt>play (clock, protoEvent, quant)<dd>returns an <a href="./../Classes/EventStreamPlayer.html">EventStreamPlayer</a>.<dt>clock<dd>The clock that schedules the EventStreamPlayer, defaults to TempoClock.default. Patterns that change graphics must use <a href="./../Classes/AppClock.html">AppClock</a>.<dt>protoEvent<dd>The initial event modified by Pbind, defaults to Event.default.<dt>quant<dd>A quantization value used by clock. When a number, the pattern will start at the next even multiple of that number. May also be a <a href="./../Classes/Quant.html">Quant</a>, which specifies quantization, time position within that quantization, and a timingOffset. See <a href="./../Classes/Quant.html">Quant</a> for details.</dl>
-<h3><a class='anchor' name='Realtime Control with EventStreamPlayer'>Realtime Control with EventStreamPlayer</a></h3>
+<h3><a class='anchor' name='Realtime%20Control%20with%20EventStreamPlayer'>Realtime Control with EventStreamPlayer</a></h3>
 
 <p>The <a href="./../Classes/EventStreamPlayer.html">EventStreamPlayer</a> provides realtime control through <strong>mute</strong>, <strong>unmute</strong>, <strong>stop</strong>, <strong>play</strong> and <strong>reset</strong>.<pre class='code prettyprint lang-sc'>(
 SynthDef(\cfstring1, { arg i_out, freq = 360, gate = 1, pan, amp=0.1;
@@ -236,7 +239,7 @@ e.stream = Pbind(
     \octave, 5, \instrument, \cfstring1
 ).asStream;
 )</pre>
-<h3><a class='anchor' name='Additional arguments'>Additional arguments</a></h3>
+<h3><a class='anchor' name='Additional%20arguments'>Additional arguments</a></h3>
 
 <p>Here is an example with more bindings. Here we have added a filter with cutoff and resonance arguments. You will need to hit command '.' before executing the next few pbind ex. without having them stack up. also, due to the synthdef's and synthdeclib, if the server is shut down you will have to reload the synthdef and re-read the synthdesclib.<pre class='code prettyprint lang-sc'>(
 SynthDef(\acid, { arg out, freq = 1000, gate = 1, pan = 1, cut = 4000, rez = 0.8, amp = 1;
@@ -280,16 +283,57 @@ Prand([
 
 ], inf).play;
 )</pre>
-<h3><a class='anchor' name='Multichannel Expansion'>Multichannel Expansion</a></h3>
+<h3><a class='anchor' name='Multichannel%20Expansion'>Multichannel Expansion</a></h3>
 
-<p>If we supply an array for any argument, the synth node will automatically replicate to handle the additional arguments. When we give the 'root' argument an array, we should hear a chord....<pre class='code prettyprint lang-sc'>(
+<p>If we supply an array for <strong>any</strong> argument, the synth node will automatically replicate to handle the additional arguments.
+<p>The only <strong>exception</strong> to this is: <code class='code prettyprint lang-sc'>\instrument</code> and <code class='code prettyprint lang-sc'>\dur</code>. For the general schema, see also: <a href="./../Guides/Multichannel-Expansion.html">Multichannel Expansion</a>.<pre class='code prettyprint lang-sc'>// When we provide the 'root' argument an array, we should hear a chord.
+// the synth def is defined above
+(
 Pbind(
     \instrument, \acid, \dur, Pseq([0.25, 0.5, 0.25], inf),
-    \root, [-24, -17],
+    \root, [-24, -17],  // expand root
     \degree, Pseq([0, 3, 5, 7, 9, 11, 5, 1], inf),
-    \pan, Pfunc({1.0.rand2}), \cut, Pxrand([1000, 500, 2000, 300], inf), \rez, Pfunc({0.7.rand +0.3}),
+    \pan, Pfunc { 1.0.rand2 },
+    \cut, Pxrand([1000, 500, 2000, 300], inf),
+    \rez, Pfunc { 0.7.rand + 0.3 },
     \amp, 0.2).play;
+);
+
+// multiple arrays are correlated in parallel, the shorter one wraps:
+(
+Pbind(
+    \instrument, \acid,
+    \dur, Pseq([0.25, 0.5, 0.25], inf),
+    \root, [-24, -17], // expand root ...
+    \degree, Pseq([0, 3, 5, 7, 9, 11, 5, 1], inf) + [0, 6, 9], // ... and expand degrees
+    \pan, Pfunc { 1.0.rand2 },
+    \cut, Pxrand([1000, 500, 2000, 300], inf),
+    \rez, Pfunc { 0.7.rand + 0.3 },
+    \amp, 0.2).play;
+);</pre>
+<div class='note'><span class='notelabel'>NOTE:</span> In Pbind, you can’t have arrays of patterns, but only patterns that <strong>return</strong> arrays.</div><pre class='code prettyprint lang-sc'>// so this does not expand:
+Pbind(\degree, [Pseq([0, 2, 3], inf), Pseq([2, 4, 5, 6], inf)]).play;
+
+// but this does:
+Pbind(\degree, Pseq([ [ 0, 2 ], [ 2, 4 ], [ 3, 5 ], [ 0, 6 ] ], inf)]).play;</pre>
+<pre class='code prettyprint lang-sc'>// transform an array of patterns into a pattern that returns arrays, use Ptuple:
+a = [Pseq([1, 2, 3], inf), Prand([100, 299, 399], inf), Pseries(0, 6, inf)];
+b = Ptuple(a);
+b.asStream.nextN(8)</pre>
+<pre class='code prettyprint lang-sc'>Pbind(\degree, Ptuple([Pseq([0, 2, 3], inf), Pseq([2, 4, 5, 6], inf)])).play;</pre>
+<pre class='code prettyprint lang-sc'>// an example: instead of \degree, [p1, p2] you write \degree, Ptuple([p1, p2])
+(
+Pdef(\x,
+    Pbind(
+        \instrument, \test,
+        \legato, 0.2,
+        \degree, Ptuple([0, Pwalk(Scale.hijaz.degrees, Prand([1, -1], inf))],
+        \scale, Scale.hijaz,
+        \strum, 0.05
+    )
+).play;
 )</pre>
+<h3><a class='anchor' name='Experimenting%20with%20Patterns'>Experimenting with Patterns</a></h3>
 
 <p>Using <a href="./../Classes/Pdef.html">Pdef</a> (provided by <a href="./../Overviews/JITLib.html">JITLib</a>) makes it easy to replace patterns on the fly:<pre class='code prettyprint lang-sc'>(
 Pdef(\buckyball).play;
@@ -314,7 +358,7 @@ Pdef(\buckyball).resume;
 
 //removing the Pdef
 Pdef.remove(\buckyball);</pre>
-<h3><a class='anchor' name='Sending to effects'>Sending to effects</a></h3>
+<h3><a class='anchor' name='Sending%20to%20effects'>Sending to effects</a></h3>
 
 <p>Assignment to effect processors can be achieved by setting the 'out' argument to the desired efx's input bus. The effect Synth must also be created. Synth.new is one way of doing this.<pre class='code prettyprint lang-sc'>(
 // efx synthdef- dig the timing on the delay and the pbind. :-P
@@ -347,7 +391,7 @@ Pbind(\instrument, \acid, \out, 20, \dur, Pseq([0.25, 0.5, 0.25], inf), \root, [
     \degree, Pseq([0, 3, 5, 7, 9, 11, 5, 1], inf), \pan, Pfunc({1.0.rand2}),
     \cut, Pxrand([1000, 500, 2000, 300], inf), \rez, Pfunc({0.7.rand +0.3}), \amp, 0.12).play;
 )</pre>
-<h3><a class='anchor' name='Additional examples'>Additional examples</a></h3>
+<h3><a class='anchor' name='Additional%20examples'>Additional examples</a></h3>
 <pre class='code prettyprint lang-sc'>(
 SynthDef(\berlinb, { arg out=0, freq = 80, amp = 0.01, pan=0, gate=1;
     var synth, env;
@@ -379,4 +423,4 @@ f.stream = Pbind(
 ).asStream;
 )</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Classes/Pbind.schelp'>/Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Classes/Pbind.schelp</a><br>link::Classes/Pbind::<br>sc version: 3.5.5</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pbind.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pbind.schelp</a><br>link::Classes/Pbind::<br>sc version: 3.8.0</div></div></body></html>
