--- a/Classes/Ptpar.html
+++ b/Classes/Ptpar.html
@@ -1,4 +1,4 @@
-<html><head><title>Ppar</title>
+<html><head><title>Ptpar</title>
 <link rel='stylesheet' href='./../scdoc.css' type='text/css' />
 <link rel='stylesheet' href='./../frontend.css' type='text/css' />
 <link rel='stylesheet' href='./../custom.css' type='text/css' />
@@ -15,13 +15,12 @@
 <div class='header'>
 <div id='label'>SuperCollider CLASSES</div>
 <div id='categories'><a href='./../Browse.html#Streams-Patterns-Events>Patterns>Parallel'>Streams-Patterns-Events>Patterns>Parallel</a></div>
-<h1>Ppar</h1>
-<div id='summary'>embed event streams in parallel</div>
+<h1>Ptpar</h1>
+<div id='summary'>embed event streams in parallel, with time offset</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Ppar.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Ppar.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/ListPattern.html">ListPattern</a> : <a href="../Classes/Pattern.html">Pattern</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
-<div id='subclasses'>Subclasses: <a href="../Classes/Pgpar.html">Pgpar</a>, <a href="../Classes/Ptpar.html">Ptpar</a></div>
-<div id='related'>See also: <a href="./../Classes/Pgpar.html">Pgpar</a>, <a href="./../Classes/Pbus.html">Pbus</a>, <a href="./../Classes/Pgroup.html">Pgroup</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Ppar.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Ppar.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Ppar.html">Ppar</a> : <a href="../Classes/ListPattern.html">ListPattern</a> : <a href="../Classes/Pattern.html">Pattern</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='related'>See also: <a href="./../Classes/Ppar.html">Ppar</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
@@ -31,24 +30,22 @@
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 <li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
-<ul class='toc'><li class='toc3'><a href='#-embedInStream'>embedInStream</a> </li>
-<li class='toc3'><a href='#-initStreams'>initStreams</a> </li>
+<ul class='toc'><li class='toc3'><a href='#-initStreams'>initStreams</a> </li>
 </ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
-<p>Embeds several event streams so that they form a single output stream with all their events in temporal order. When one stream ends, the other streams are further embedded until all have ended.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
+<p>Embeds several event streams so that they form a single output stream with all their events in temporal order, providing a global <strong>offset</strong> for each. When one stream ends, the other streams are further embedded until all have ended.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>list</span>, <span class='argstr'>repeats: 1</span>)</h3>
 <div class='supmethod'>From superclass: <a href='./../Classes/ListPattern.html'>ListPattern</a></div>
 <div class='method'>
 <p><h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>list<td class='argumentdesc'>
-<p>list of patterns or streams.<tr><td class='argumentname'>repeats<td class='argumentdesc'>
+<p>list of pairs of times and patterns: [time, pat, time, pat .. ].<tr><td class='argumentname'>repeats<td class='argumentdesc'>
 <p>repeat the whole pattern n times.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-embedInStream' href='./../Overviews/Methods.html#embedInStream'>embedInStream</a> (<span class='argstr'>inval</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-initStreams' href='./../Overviews/Methods.html#initStreams'>initStreams</a> (<span class='argstr'>priorityQ</span>)</h3>
 <h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>// see the delta values in the resulting events
@@ -56,7 +53,7 @@
 var a, b, c, t;
 a = Pbind(\x, Pseq([1, 2, 3, 4]), \dur, 1);
 b = Pbind(\x, Pseq([10, 20, 30, 40]), \dur, 0.4);
-c = Ppar([a, b]);
+c = Ptpar([0.0, a, 1.3, b]);
 t = c.asStream;
 20.do({ t.next(Event.default).postln; });
 )
@@ -66,7 +63,7 @@ t = c.asStream;
 var a, b;
 a = Pbind(\note, Pseq([7, 4, 0], 4), \dur, Pseq([1, 0.5, 1.5], inf));
 b = Pbind(\note, Pseq([5, 10, 12], 4), \dur, 1);
-Ppar([ a, b ]).play;
+Ptpar([ 0.0, a, 1.3, b ]).play;
 )</pre>
 
-<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Ppar.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Ppar.schelp</a><br>link::Classes/Ppar::<br>sc version: 3.8.0</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Ptpar.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Ptpar.schelp</a><br>link::Classes/Ptpar::<br>sc version: 3.8.0</div></div></body></html>
