--- a/Study Guides/Digital Synthesis.html
+++ b/Study Guides/Digital Synthesis.html
@@ -41,7 +41,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Wavetable%20synthesis%20in%20SC'>Wavetable synthesis in SC</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Time-varying%20Waveform%20Synthesis'>Time-varying Waveform Synthesis</a></li>
 <ul class='toc'><li class='toc2'><a href='#Envelopes'>Envelopes</a></li>
-<ul class='toc'></ul></ul><li class='toc1'><a href='#Substractive%20Synthesis'>Substractive Synthesis</a></li>
+<ul class='toc'></ul></ul><li class='toc1'><a href='#Subtractive%20Synthesis'>Subtractive Synthesis</a></li>
 <ul class='toc'><li class='toc2'><a href='#Filters'>Filters</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Pass%20Filters'>Pass Filters</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Resonant%20Filters'>Resonant Filters</a></li>
@@ -50,12 +50,12 @@
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Noise'>Noise</a></li>
 <ul class='toc'><li class='toc2'><a href='#Coloured%20Noise'>Coloured Noise</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Additive%20Synthesis'>Additive Synthesis</a></li>
-<ul class='toc'><li class='toc2'><a href='#Additive%20through%20Waveshaping'>Additive through Waveshaping</a></li>
+<ul class='toc'><li class='toc2'><a href='#Additive%20through%20Wave%20shaping'>Additive through Wave shaping</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Additive%20through%20Summation'>Additive through Summation</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Time-varying%20Additive%20Synthesis'>Time-varying Additive Synthesis</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Multiple%20Wavetable%20Synthesis'>Multiple Wavetable Synthesis</a></li>
 <ul class='toc'><li class='toc2'><a href='#Wavetable%20crossfading'>Wavetable crossfading</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Wavestacking'>Wavestacking</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Wave%20stacking'>Wave stacking</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Modulation%20Synthesis'>Modulation Synthesis</a></li>
 <ul class='toc'><li class='toc2'><a href='#Ring%20Modulation%20(RM)'>Ring Modulation (RM)</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Amplitude%20Modulation%20(AM):'>Amplitude Modulation (AM):</a></li>
@@ -63,7 +63,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Phase%20modulation'>Phase modulation</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Digital%20Synthesis'>Digital Synthesis</a></h2>
 
-<p>Digital Synthesis is the generation of waveforms with untis (values) usually generated digitally and then transfered through a D/A converter to produce sound. Waveforms can be generated through mathematical formulae, A/D conversion, analysis and resynthesis of recorded sound, and other non-standard techniques.<h3><a class='anchor' name='Some%20Synthesis%20Techniques'>Some Synthesis Techniques</a></h3>
+<p>Digital Synthesis is the generation of waveforms with units (values) usually generated digitally and then transferred through a D/A converter to produce sound. Waveforms can be generated through mathematical formulae, A/D conversion, analysis and resynthesis of recorded sound, and other non-standard techniques.<h3><a class='anchor' name='Some%20Synthesis%20Techniques'>Some Synthesis Techniques</a></h3>
 <ul>
 <li>Sample-based synthesis<li>Additive synthesis<li>Subtractive synthesis<li>Wavetable synthesis<li>Amplitude Modulation (AM)<li>Frequency Modulation (FM)<li>Ring Modulation (RM)<li>Granular synthesis<li>Spectral Modelling<li>Physical Modelling<li>Non-standard synthesis</ul>
 <h2><a class='anchor' name='Sample-based%20synthesis'>Sample-based synthesis</a></h2>
@@ -112,7 +112,7 @@ b.free  // return the memory and free buffer ID, IMPORTANT</pre>
 
 <p><code class='code prettyprint lang-sc'>BufRateScale</code>
 <p>File being read into a buffer may have a different sample than SC is using
-<p><code class='code prettyprint lang-sc'>BufRateScale.kr(bufnum)</code> returns a ratio to adjust the playback of the soundfile (for example with different sampling rates).<pre class='code prettyprint lang-sc'>b = Buffer.read(s, "/Users/federicoreuben/Music/MastersExamples/04 4 bit 9d api+e+6 [126.26].wav"); //change to your soundfile path</pre>
+<p><code class='code prettyprint lang-sc'>BufRateScale.kr(bufnum)</code> returns a ratio to adjust the playback of the sound file (for example with different sampling rates).<pre class='code prettyprint lang-sc'>b = Buffer.read(s, "/Users/federicoreuben/Music/MastersExamples/04 4 bit 9d api+e+6 [126.26].wav"); //change to your sound file path</pre>
 
 <p>to scale the playback:<pre class='code prettyprint lang-sc'>{ PlayBuf.ar(2, b.bufnum, BufRateScale.kr(b.bufnum), loop: 1) }.scope
 
@@ -155,7 +155,7 @@ var start = 1/2;
 b.free</pre>
 
 <p><strong>Exercise</strong>:<ol>
-<li>Play with <code class='code prettyprint lang-sc'>PlayBuf</code> loading sound files (uncompressed) and changing the rate with different values.<li>Use another UGen to modulate the rate.<li>Add an envelopte to PlayBuf with different random starting points.</ol>
+<li>Play with <code class='code prettyprint lang-sc'>PlayBuf</code> loading sound files (uncompressed) and changing the rate with different values.<li>Use another UGen to modulate the rate.<li>Add an envelope to PlayBuf with different random starting points.</ol>
 <pre class='code prettyprint lang-sc'>//granular example
 b = Buffer.loadDialog; //choose sound file
 
@@ -205,7 +205,7 @@ x.free; b.close; b.free;    // close and free</pre>
 <li>Sine Wave<li>Square Wave<li>Saw Wave<li>Triangle Wave</ul>
 <div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/common waves.png'/><br><b>Common waveforms in synthesis</b></div>
 
-<p>They have differnet characteristics and complex waves (Square, Saw, Triangle).
+<p>They have different characteristics and complex waves (Square, Saw, Triangle).
 <p><strong>Square Wave</strong><ul>
 <li>Odd harmonics<li>Amplitude of each harmonic is multiplied by <em>1/harmonicNum</em></ul>
 <div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/squarewave.png'/><br><b>Square Wave</b></div>
@@ -260,7 +260,7 @@ sinArr = sinArr.add(SinOsc.ar(freq * item,0,(0.5*(1/item/item)).neg));
 sinArr.sum;
 }.scope;
 )</pre>
-<div class='note'><span class='notelabel'>NOTE:</span> This approach is for demonstration purposes. Use the <code class='code prettyprint lang-sc'>UGen</code> below if you just want to use a trinagle wave</div>
+<div class='note'><span class='notelabel'>NOTE:</span> This approach is for demonstration purposes. Use the <code class='code prettyprint lang-sc'>UGen</code> below if you just want to use a triangle wave</div>
 <p>SC has a triangle wave <code class='code prettyprint lang-sc'>UGen</code>:<pre class='code prettyprint lang-sc'>{LFTri.ar(100, 0, 1, 0)}.scope//args: freq, iphase, mul, add</pre>
 <h2><a class='anchor' name='Fixed-Waveform%20Table-lookup%20Synthesis'>Fixed-Waveform Table-lookup Synthesis</a></h2>
 <h3><a class='anchor' name='Wavetable-lookup%20Synthesis:'>Wavetable-lookup Synthesis:</a></h3>
@@ -279,7 +279,7 @@ b.plot
 
 b.sine1(1.0/[1,2,3,4,5,6], true, true, true); //add 6 harmonics with decaying amplitudes
 
-b.sine1(Array.rand(32,0,1), true, true, true); //change wavetable with random selction of partials
+b.sine1(Array.rand(32,0,1), true, true, true); //change wavetable with random selection of partials
 b.plot
 
 b.sine1(Array.rand(16,0,1.0).postln, true, true, true); //change wavetable with random amplitude in partials
@@ -293,7 +293,7 @@ b.plot;
 
 b.sine1(1.0/(1..100), true, true, true);
 
-b.sine1(Array.fill(50,{[0,1].choose}), true, true, true); //evaluate serveral times
+b.sine1(Array.fill(50,{[0,1].choose}), true, true, true); //evaluate several times
 b.plot;
 
 b.sine1([1,1,1,0,0,0,1,1,1,0,0,0,0,0,0.5,0.5,0.5], true, true, true);
@@ -312,7 +312,7 @@ b.plot;
 <ul>
 <li>An envelope is a function in time that describes a line or curve<li>Commercial synthesisers amplitude envelopes in 4 stages<li>Attack, Decay, Sustain and Release (ADSR)<li>We still need a way of using the envelope to modify the amplitude of the “constant sounding” oscillator</ul>
 <div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/adsr.png'/><br><b>ADSR Envelope</b></div>
-<div class='note'><span class='notelabel'>NOTE:</span> It's imporant to understand that in the digital domain, an Envelope specifies a wavetable</div>
+<div class='note'><span class='notelabel'>NOTE:</span> It's important to understand that in the digital domain, an Envelope specifies a wavetable</div>
 <p>In SC we can make envelopes with the <code class='code prettyprint lang-sc'>Env</code> specification.<pre class='code prettyprint lang-sc'>Env.new([0,1,0], [1,9]).plot; //values, time
 Env.adsr.plot;
 Env.adsr(0.1,1,0.01).plot;</pre>
@@ -342,7 +342,7 @@ c = Env.new(a,d, curve:'sin');
         b.sine1(Array.rand((100*a[index]).round.postln,0,1).cubed, true, true, true);
 }}.fork;
 )</pre>
-<h2><a class='anchor' name='Substractive%20Synthesis'>Substractive Synthesis</a></h2>
+<h2><a class='anchor' name='Subtractive%20Synthesis'>Subtractive Synthesis</a></h2>
 <ul>
 <li>Method of Sound Synthesis<li>Frequencies are attenuated by using digital filters<li>Usually source rich in frequency content/partials/harmonics<li>Sources may include: Complex waves (such as saw (<code class='code prettyprint lang-sc'>Saw.ar</code>), square (<code class='code prettyprint lang-sc'>Pulse.ar</code>), triangle (<code class='code prettyprint lang-sc'>LFTri.ar</code>)), noise, pulses, etc.<li>Resonance can be used to create interesting effects like ringing<li>Subtract and add methods</ul>
 <h3><a class='anchor' name='Filters'>Filters</a></h3>
@@ -525,10 +525,10 @@ a.setn(\ringtimes, Array.rand(4, 0.2, 4) );</pre>
 <h2><a class='anchor' name='Additive%20Synthesis'>Additive Synthesis</a></h2>
 <ul>
 <li>Synthesis technique based on summation of elementary waveforms to create more complex waveform.<li>Fixed-waveform Additive Synthesis (more economic with CPU)<li>Summation of different oscillators (more versatile but more expensive in CPU)</ul>
-<h3><a class='anchor' name='Additive%20through%20Waveshaping'>Additive through Waveshaping</a></h3>
+<h3><a class='anchor' name='Additive%20through%20Wave%20shaping'>Additive through Wave shaping</a></h3>
 
-<p>Waveshaping is a technique that uses a <a href="https://en.wikipedia.org/wiki/Transfer_function">transfer function</a> to shape a signal.
-<p>Waveshaping transfer functions are designed with <a href="https://en.wikipedia.org/wiki/Chebyshev_polynomials">Chebyshev Polynomials</a> to generate harmonics.<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/chebyshev.png'/><br><b>Plot of Chebyshev Polynomials</b></div>
+<p>Wave shaping is a technique that uses a <a href="https://en.wikipedia.org/wiki/Transfer_function">transfer function</a> to shape a signal.
+<p>Wave shaping transfer functions are designed with <a href="https://en.wikipedia.org/wiki/Chebyshev_polynomials">Chebyshev Polynomials</a> to generate harmonics.<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/chebyshev.png'/><br><b>Plot of Chebyshev Polynomials</b></div>
 
 <p><strong>Example</strong>:
 <p>Fill a buffer with cheby specs: I want the first harmonic at 0.25 amplitude, second at 0.5, third at 0.25<pre class='code prettyprint lang-sc'>b = Buffer.alloc(s, 512, 1, {arg buf; buf.chebyMsg([0.25,0.5,0.25], false)});
@@ -547,7 +547,7 @@ b.plot;
 
 b.free;</pre>
 
-<p>You can also make your own arbitrary shpers:<pre class='code prettyprint lang-sc'>b = Buffer.alloc(s, 1024, 1);
+<p>You can also make your own arbitrary shapers:<pre class='code prettyprint lang-sc'>b = Buffer.alloc(s, 1024, 1);
 b.cheby([1, 0.5, 1, 0.125]);
 
 (
@@ -558,7 +558,7 @@ b.cheby([1, 0.5, 1, 0.125]);
 
 b.free;</pre>
 
-<p>You can calculate the transfer fuction as an array and then convert it to a wavetable:<pre class='code prettyprint lang-sc'>b = Buffer.alloc(s, 1024, 1);
+<p>You can calculate the transfer function as an array and then convert it to a wavetable:<pre class='code prettyprint lang-sc'>b = Buffer.alloc(s, 1024, 1);
 
 //size must be power of two plus 1
 t = Signal.chebyFill(513,[1, 0.5, 1, 0.125]);
@@ -749,9 +749,9 @@ Synth(\wavecross1, [\freq, 880]);
 <ul>
 <li>Wavetable crossfading is at core of compound synthesis, vector synthesis (Sequential Circuits, Korg, Yamaha), L/A (Linear Arithmetic synthesis, Roland)<li>Prophet VS (1985, Sequential Circuits) - crossfade between 4 different waveforms<li>Later synthesisers: users specify arbitrary number of waveforms during one event</ul>
 <div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/wavetable_crossfading2.png'/><br><b>Complex user specified wavetable crossfading</b></div>
-<h3><a class='anchor' name='Wavestacking'>Wavestacking</a></h3>
+<h3><a class='anchor' name='Wave%20stacking'>Wave stacking</a></h3>
 <ul>
-<li>Wavetable staking or wavestacking is a variation of additive synthesis, but:<li>Instead of sine waves, wavestacking uses different more complex signals (usually sampled) “stacked” together to create new timbre<li>Each waveform has its own amplitude envelope causing spectral changes during event<li>Storing waveforms in table-lookup oscillators<li>Also combined with wavetable crossfade for more internal motion<li>Wavestacking is similar to additive with different complex signals</ul>
+<li>Wavetable staking or wave stacking is a variation of additive synthesis, but:<li>Instead of sine waves, wave stacking uses different more complex signals (usually sampled) “stacked” together to create new timbre<li>Each waveform has its own amplitude envelope causing spectral changes during event<li>Storing waveforms in table-lookup oscillators<li>Also combined with wavetable crossfade for more internal motion<li>Wave stacking is similar to additive with different complex signals</ul>
 <div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/wavestacking.png'/><br><b>Wavestacking patch</b></div>
 <pre class='code prettyprint lang-sc'>(
 SynthDef(\wavestack1, {arg freq=440, attack=0.1, sus=0.3, rel=2, vol=0.5;
@@ -800,7 +800,7 @@ Synth(\wavestack1, [\freq, 880]);
 <p><li>If modulation frequency is higher than carrier frequency, negative frequencies occur. Negative frequency converts into positive mirror-image (with phase change)</ul>
 <div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide2/ring1.png'/><br><b>Ring Modulation</b></div>
 
-<p>Create a frequency analyzer:<pre class='code prettyprint lang-sc'>FreqScope.new(400, 200, 0);</pre>
+<p>Create a frequency analyser:<pre class='code prettyprint lang-sc'>FreqScope.new(400, 200, 0);</pre>
 
 <p>Simple ring modulation:<pre class='code prettyprint lang-sc'>{SinOsc.ar(440,0,SinOsc.ar(Line.kr(1,10,20)))*0.5}.scope; //low freq ring modulation causes tremolo</pre>
 
@@ -859,7 +859,7 @@ Synth(\wavestack1, [\freq, 880]);
 }.scope;
 )</pre>
 
-<p>In AM, high frequency causes sidebands but also mantains carrier frequency:<pre class='code prettyprint lang-sc'>b = Buffer.loadDialog;
+<p>In AM, high frequency causes sidebands but also maintains carrier frequency:<pre class='code prettyprint lang-sc'>b = Buffer.loadDialog;
 {PlayBuf.ar(1, b.bufnum)*SinOsc.ar(440, add:1, mul:0.5)}.play</pre>
 
 <p>In RM, high frequency causes sidebands:<pre class='code prettyprint lang-sc'>{PlayBuf.ar(1, b.bufnum)*SinOsc.ar(440)}.play</pre>
